proxy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: itp-proxy-service
spec:
  selector:
    app: itp-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
