proxy-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: itp-proxy-ingress
spec:
  backend:
    serviceName: itp-proxy-service
    servicePort: 80
